# neufbox

./: Makefile  README
atheros/atheros-int6k/: Makefile
atheros/atheros-wireless/: Config.in  Makefile
broadcom/broadcom-adsl/: Makefile
broadcom/broadcom-bcmlog/: Makefile
broadcom/broadcom-dsldiagd/: Makefile
broadcom/broadcom-endpointdrv/: Config.in  Makefile
broadcom/broadcom-ethernet/: Makefile
broadcom/broadcom-ethswctl/: Makefile
broadcom/broadcom-fap/: Makefile
broadcom/broadcom-fapctl/: Makefile
broadcom/broadcom-fcctl/: Makefile
broadcom/broadcom-mgcp/: Config.in  Makefile
broadcom/broadcom-pktengine/: Makefile
broadcom/broadcom-usb/: Makefile
broadcom/broadcom-wireless/: Makefile
broadcom/broadcom-wireless_softs/: Config.in  Makefile
broadcom/broadcom-xdslctl/: Makefile
broadcom/broadcom-xtmcfg/: Makefile
broadcom/broadcom-xtmctl/: Makefile
config/nb4/: main.config  rescue.config  virginmain.config  virginrescue.config
config/nb5/: main.config  rescue.config
config/nb6/: main.config  rescue.config
config/x86/: generic.config
efixo/efixo-api/: Makefile
efixo/efixo-api/src/src/ctl/: system.c
efixo/efixo-backupd/: Makefile
efixo/efixo-base-files/files/adsl/etc/init.d/: dsldiags
efixo/efixo-base-files/files/common/etc/: preinit
efixo/efixo-base-files/files/ipv6/etc/ppp/: ipv6-down
efixo/efixo-base-files/files/main/etc/init.d/: dhcpc  firewall  sipalg
efixo/efixo-base-files/files/main/usr/sbin/: defaultroute
efixo/efixo-bcm53xx/: Makefile
efixo/efixo-bcm53xx/src/: Makefile  bcm53xx.c  bcm53xx.h  mdio.c  switch-robo.c
efixo/efixo-libbackup/: Makefile
efixo/efixo-libecom/: Makefile
efixo/efixo-libestuff/: Makefile
efixo/efixo-libnbd/: Config.in  Makefile
efixo/efixo-libnbd/src/: CodingStyle  Makefile  Makefile.am  bootstrap  configure.in
efixo/efixo-libnbd/src/lib/: Makefile  Makefile.am  autoconf.c  backup3g.c  core.c  ddnsctl.c  disk.c  dsl.c  eco.c  event.c  firewall.c  gpio.c  hotspot.c  igmp.c  lan.c  leds.c  nat.c  nbctl.c  nvram.c  plc.c  printer.c  sambactl.c  sfp.c  spy.c  status.c  stb.c  uping.c  uroute.c  usharectl.c  utraceroute.c  vSStest.c  voip.c  wlan.c
efixo/efixo-libnbd/src/lib/doc/: Doxyfile
efixo/efixo-libnbd/src/lib/include/nbd/: autoconf.h  backup3g.h  core.h  ctlan.h  ddnsctl.h  disk.h  dsl.h  eco.h  event.h  firewall.h  gpio.h  hotspot.h  igmp.h  lan.h  leds.h  nat.h  nbctl.h  nvram.h  ping.h  plc.h  printer.h  sambactl.h  sfp.h  spy.h  status.h  stb.h  traceroute.h  uroute.h  usharectl.h  vSStest.h  voip.h  wlan.h
efixo/efixo-libnbd/src/lib/include/nbd/plugins/: autoconf.h  disk.h  dsl.h  lan.h  leds.h  nat.h  nvram.h  ping.h  sambactl.h  sfp.h  status.h  traceroute.h  usharectl.h  vSS_core.h  vSS_core_3216.h  vSS_core_3217.h  vSStest.h  voip.h  wifi.h  wlan.h  xml.h
efixo/efixo-nbd/: Makefile
efixo/efixo-rcc/: Makefile
efixo/efixo-rtk-switch/: Makefile
efixo/efixo-sandbox/: Makefile
efixo/efixo-sipclient/: Makefile
efixo/efixo-voice-subsys/: Makefile
efixo/efixo-voicessdiags/: Makefile
efixo/efixo-wrapper/: Makefile
efixo/efixo-www/: Makefile
efixo/efixo-www/src/: Config.in  Makefile
efixo/efixo-www/src/docroot/css/network/: nat.css
efixo/efixo-www/src/docroot/js/: index.js
efixo/efixo-www/src/fcgiroot/rgx/: rootfs.hdf
efixo/efixo-www/src/src/: nbd.h
efixo/efixo-www/src/src/kit/: kit_helper.c
efixo/efixo-www/src/src/stb/: stb_info.c
efixo/efixo-www/src/src/wui/: network_nat.c  network_wan.c
include/: efixo.mk  feeds.mk  nb4.mk  nb5.mk  nb6.mk  openwrt.mk  profiling.mk  targets.mk  version.mk  vt102.mk  x86.mk
openwrt/: Config.in  Makefile  feeds.conf  rules.mk
openwrt/include/: depends.mk  host-build.mk  image.mk  kernel-version.mk  kernel.mk  netfilter.mk  package-bin-ipkg.mk  package-defaults.mk  package-ipkg.mk  package.mk  scan.mk  target.mk  toplevel.mk  unpack.mk
openwrt/package/base-files/: Makefile
openwrt/package/base-files/files/etc/: banner
openwrt/package/busybox/: Makefile
openwrt/package/busybox/files/: telnet
openwrt/package/busybox/patches/: 310-passwd_access.patch  500-neufbox-motd.patch  501-neufbox-login-notimeout.patch  502-neufbox-add-udhcpc-options.patch  503-neufbox-reboot-timeout.patch  504-neufbox-wget-success-on-416-error.patch  525-neufbox-udhcpc-bg.patch  550-neufbox-wget-tos.patch  551-neufbox-telnetd-tos.patch  552-neufbox-udhcpc-tos.patch  600-neufbox-wget-timeout.patch  601-neufbox-wget-content-length.patch  602-neufbox-wget-continue-failed.patch  902-telnetd_intr.patch  999-watchdog-rt.patch
openwrt/package/dnsmasq/: Makefile
openwrt/package/dnsmasq/patches/: 500-neufbox-lan-topology.patch
openwrt/package/dropbear/: Makefile
openwrt/package/dropbear/patches/: 501-neufbox-tos.patch  502-empty-passwd.patch
openwrt/package/e2fsprogs/: Makefile
openwrt/package/e2fsprogs/patches/: 000-libuuid-deps.patch
openwrt/package/iproute2/: Makefile
openwrt/package/iptables/: Makefile
openwrt/package/iptables/patches/: 100-rerty.patch
openwrt/package/kernel/modules/: crypto.mk  fs.mk  i2c.mk  netdevices.mk  netfilter.mk  netsupport.mk  other.mk  spi.mk  usb.mk  wireless.mk
openwrt/package/mac80211/: Makefile
openwrt/package/opkg/: Makefile
openwrt/package/opkg/patches/: 002-no-shave.patch
openwrt/package/ppp/: Makefile
openwrt/package/ppp/patches/: 105-debian_demand.patch  109-debian_pppoe_cleanup.patch  200-makefile.patch  203-opt_flags.patch  501-neufbox-pppoe-session.patch  502-neufbox-tr101.patch  600-pppoes.patch
openwrt/package/robocfg/: Makefile
openwrt/package/robocfg/src/: Makefile  robocfg.c
openwrt/package/swconfig/: Makefile
openwrt/package/swconfig/src/: cli.c  uci.c
openwrt/package/uboot-envtools/patches/: 100-nb5-env.patch
openwrt/package/uboot-lantiq/: Makefile
openwrt/scripts/: feeds  remote-gdb
openwrt/tools/: Makefile
openwrt/tools/fakeroot/: Makefile
openwrt/tools/firmware-utils/: Makefile
openwrt/tools/firmware-utils/src/: bcm_tag.h  mkfirmware-nb5.c
openwrt/tools/lzma-old/: Makefile
openwrt/tools/squashfs/patches/: 111-endian.patch
(+15 files in other folders)
